feat: Enhance forgot password dialog and link handling with resizing and error management